<resources>
    <string name="app_name" translatable="false">AndroidLabs</string>
    <string name="email">Enter your email address:</string>
    <string name="emailHint">Enter your email address here</string>
    <string name="password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="nameHint">Enter your name</string>
    <string name="urEmail">Your email</string>
    <string name="urEmailHint">Enter your email</string>
    <string name="pic">Your picture:</string>
    <string name="picHint">Click the button above to take a picture</string>
</resources>