<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urEmail"/>

    <EditText
        android:id="@+id/savedEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/urEmailHint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pic"/>

    <ImageButton
        android:id="@+id/picBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picHint"/>

</LinearLayout>